@@ -1,3 +1,8 @@
+2018-04-10  Jakub Jelinek  <jakub@redhat.com>
+
+	PR fortran/85313
+	* gfortran.dg/gomp/pr85313.f90: New test.
+
 2018-04-10  Paolo Carlini  <paolo.carlini@oracle.com>
 
 	PR c++/24314
